--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pdf": "^7.7.1",
